Fix launch.json and PointsDatabase.java